server.js y public en raiz, comando npm run test(nodemon ./src/server.js => nodemon server.js)y comentarios

--- a/views/student.ejs
+++ b/views/student.ejs
@@ -25,7 +25,7 @@
                     <label for="nss">Nss</label>
                     <input type="text" id="nss" name="nss" required><br/><br/>
                     
-                    <input type="submit" value="submit" class="agregar-btn">
+                    <input type="submit" value="Agregar" class="agregar-btn">
                 </form>
             </div>            
         </div>
